--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
-# Object file
-*.o
+My first morning up and writing.  My teenager is still sleeping - Inlet the dog out - she was sprayed by a skunk- bath time 
 
-# Ada Library Information
-*.ali
+I gotta hurry this along because I have to go to the alterations person to pick up daughters prom dress and I need to make a mammogram
+And Pap smear appt.
+
+My husband left 2 notes for "honey dos"
+
+My day has started 
